[tool.setuptools]
package-dir = {"" = "src"}
packages = ["rootlab_lib"]

[project]
name = "rootlab_lib"
version = "0.7.7"
description = "RootLab data analysis tools"
readme = "README.md"
authors = [
    { name = "Trevor Swan", email = "tcs94@case.edu" },
    { name = "Samuel Root", email = "ser132@case.edu" }
]
requires-python = ">=3.7"
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "scipy",
  "pyserial",
  "opencv-python"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/trevorswan11/rootlab-lib"
Issues = "https://github.com/trevorswan11/rootlab-lib/issues"
